    /*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/8.1.1/userguide/building_java_projects.html
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

version = '2.0.0'

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // This dependency is used by the application.
    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation group: 'com.google.guava', name: 'guava', version: '32.1.2-jre'
    
    // https://mvnrepository.com/artifact/org.jsoup/jsoup
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.17.2'    
    
    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.9'
    
    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j2-impl
    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j2-impl', version: '2.22.1'

    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.22.1'

    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.22.1'
    
    // https://mvnrepository.com/artifact/org.jdbi/jdbi3-core
    implementation group: 'org.jdbi', name: 'jdbi3-core', version: '3.41.3'
    
    // https://mvnrepository.com/artifact/org.jdbi/jdbi3-sqlobject
    implementation group: 'org.jdbi', name: 'jdbi3-sqlobject', version: '3.41.3'
    
    // https://mvnrepository.com/artifact/org.jdbi/jdbi3-postgres
    implementation group: 'org.jdbi', name: 'jdbi3-postgres', version: '3.41.3'
    
    // https://mvnrepository.com/artifact/org.postgresql/postgresql
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
    
    // https://mvnrepository.com/artifact/com.mchange/c3p0
    implementation group: 'com.mchange', name: 'c3p0', version: '0.9.5.5'
    
    // https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
    
    // https://mvnrepository.com/artifact/jakarta.ws.rs/jakarta.ws.rs-api
    implementation group: 'jakarta.ws.rs', name: 'jakarta.ws.rs-api', version: '3.1.0'
    
    // https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server
    implementation group: 'org.eclipse.jetty', name: 'jetty-server', version: '11.0.24'
    
    // https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-servlet
    implementation group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '11.0.24'
    
    // https://mvnrepository.com/artifact/org.glassfish.hk2/hk2-api
    implementation group: 'org.glassfish.hk2', name: 'hk2-api', version: '3.1.1'
    
    // https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-server
    implementation group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '3.1.3'
    
    // https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client
    implementation group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '3.1.3'
    
    // https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-servlet-core
    implementation group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: '3.1.3'
    
    // https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-servlet
    implementation group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version: '3.1.3'
    
    // https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-jetty-http
    implementation group: 'org.glassfish.jersey.containers', name: 'jersey-container-jetty-http', version: '3.1.3'
    
    // https://mvnrepository.com/artifact/org.glassfish.jersey.inject/jersey-hk2
    implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.1.3'
    
    // https://mvnrepository.com/artifact/org.glassfish.jersey.ext/jersey-entity-filtering
    implementation group: 'org.glassfish.jersey.ext', name: 'jersey-entity-filtering', version: '3.1.3'
    
    // https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-json-jackson
    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.1.3'
    
    // https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-sse
    implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-sse', version: '3.1.3'
    
    
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.17.2'
    
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.2'
    
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.jaxrs/jackson-jaxrs-base
    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-base', version: '2.17.2'
    
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.jaxrs/jackson-jaxrs-json-provider
    implementation group: 'com.fasterxml.jackson.jaxrs', name: 'jackson-jaxrs-json-provider', version: '2.17.2'
    
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.17.2'
    
    // https://mvnrepository.com/artifact/jakarta.json/jakarta.json-api
    implementation group: 'jakarta.json', name: 'jakarta.json-api', version: '2.1.3'
    
    // https://mvnrepository.com/artifact/org.glassfish/jakarta.json
    implementation group: 'org.glassfish', name: 'jakarta.json', version: '2.0.1'
    
    // https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api
    implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.0.2'
    
    // https://mvnrepository.com/artifact/com.sun.mail/javax.mail
    implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'

    // https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl
    implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '4.0.5'
    
    implementation files('libs/simple-quick-fix-2.3.1.jar')
    
    //need wui
    implementation project(':wui')

    // Use JUnit test framework.
    testImplementation 'junit:junit:4.13.2'
    
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    // Define the main class for the application.
    mainClass = 'easyfix.EasyFIX'
}

tasks.processResources {
    exclude '**/dev/**'  // Exclude a folder
}

import java.text.SimpleDateFormat
// Generate a timestamp
def timestamp = new SimpleDateFormat("yyyyMMdd-HHmm").format(new Date())

jar {
    archiveFileName = "easyfix-${project.version}-${timestamp}.jar"
}

tasks.distTar {
    archiveFileName = "easyfix-${project.version}-${timestamp}.tar"
}

tasks.distZip {
    archiveFileName = "easyfix-${project.version}-${timestamp}.zip"
}
